Archive2/21/60a1ff2f6aef0d/output
main.cpp:10:6: error: invalid operands to binary expression ('std::stringstream' (aka 'basic_stringstream<char>') and 'int')
  ss >> char(c);
  ~~ ^  ~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:120:7: note: candidate function not viable: no known conversion from 'char' to '__istream_type &(*)(__istream_type &)' for 1st argument
      operator>>(__istream_type& (*__pf)(__istream_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:124:7: note: candidate function not viable: no known conversion from 'char' to '__ios_type &(*)(__ios_type &)' for 1st argument
      operator>>(__ios_type& (*__pf)(__ios_type&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:131:7: note: candidate function not viable: no known conversion from 'char' to 'std::ios_base &(*)(std::ios_base &)' for 1st argument
      operator>>(ios_base& (*__pf)(ios_base&))
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:168:7: note: candidate function not viable: no known conversion from 'char' to 'bool &' for 1st argument
      operator>>(bool& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:172:7: note: candidate function not viable: no known conversion from 'char' to 'short &' for 1st argument
      operator>>(short& __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:175:7: note: candidate function not viable: no known conversion from 'char' to 'unsigned short &' for 1st argument
      operator>>(unsigned short& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:179:7: note: candidate function not viable: no known conversion from 'char' to 'int &' for 1st argument
      operator>>(int& __n);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:182:7: note: candidate function not viable: no known conversion from 'char' to 'unsigned int &' for 1st argument
      operator>>(unsigned int& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:186:7: note: candidate function not viable: no known conversion from 'char' to 'long &' for 1st argument
      operator>>(long& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:190:7: note: candidate function not viable: no known conversion from 'char' to 'unsigned long &' for 1st argument
      operator>>(unsigned long& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:195:7: note: candidate function not viable: no known conversion from 'char' to 'long long &' for 1st argument
      operator>>(long long& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:199:7: note: candidate function not viable: no known conversion from 'char' to 'unsigned long long &' for 1st argument
      operator>>(unsigned long long& __n)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:214:7: note: candidate function not viable: no known conversion from 'char' to 'float &' for 1st argument
      operator>>(float& __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:218:7: note: candidate function not viable: no known conversion from 'char' to 'double &' for 1st argument
      operator>>(double& __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:222:7: note: candidate function not viable: no known conversion from 'char' to 'long double &' for 1st argument
      operator>>(long double& __f)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:235:7: note: candidate function not viable: no known conversion from 'char' to 'void *&' for 1st argument
      operator>>(void*& __p)
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:259:7: note: candidate function not viable: no known conversion from 'char' to '__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *') for 1st argument
      operator>>(__streambuf_type* __sb);
      ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:727:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'char' to 'unsigned char &' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:732:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'char' to 'signed char &' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:774:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'char' to 'unsigned char *' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:779:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'char' to 'signed char *' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/istream.tcc:923:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>] not viable: expects an l-value for 2nd argument
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/istream:872:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>, _Tp = char] not viable: no known conversion from 'std::stringstream' (aka 'basic_stringstream<char>') to 'basic_istream<char, std::char_traits<char> > &&' for 1st argument
    operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/streambuf:168:9: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'char'
        operator>>(basic_istream<_CharT2, _Traits2>&,
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/istream.tcc:955:5: note: candidate template ignored: could not match '_CharT *' against 'char'
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
    ^
1 error generated.
